complete section "the python shell"

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -2,23 +2,29 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Twiggle Python Workshop 🐍\n",
+    "\n",
+    "A ~3 hour hackers guide to python."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "# Twiggle Python Workshop 🐍\n",
-    "A ~3 hour hackers guide to python.\n",
-    "\n",
     "## Topics\n",
     "1. What's python?\n",
     "\n",
     "2. Installation\n",
     "\n",
-    "3. The python REPL\n",
+    "3. The python shell\n",
     "\n",
     "4. Code files \n",
     "\n",
-    "5. Basic syntax\n",
+    "5. Syntax\n",
     "\n",
     "6. Common Data structures\n",
     "\n",
@@ -30,7 +36,7 @@
     "\n",
     "10. Modules & Packages\n",
     "\n",
-    "11. **Exercise 2, Electric boogaloo!**\n"
+    "11. **Exercise 2, Electric boogaloo!**"
    ]
   },
   {
@@ -41,11 +47,15 @@
     "\n",
     "* \"Multi paradigm programming language\" 😄\n",
     "\n",
+    "\n",
     "* First appeared 20 February 1991, 21 years ago\n",
+    "\n",
     "\n",
     "* Implemented in C (and others)\n",
     "\n",
+    "\n",
     "* \"Interpreted\" (and compiled)\n",
+    "\n",
     "\n",
     "* Totally open source, maintained by [PSF](https://www.python.org/psf/led)\n",
     "  * headed by BDFL Guido van Rosum\n",
@@ -58,21 +68,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  * For windows - https://www.python.org/ftp/python/3.6.4/python-3.6.4-amd64.exe\n",
-    "  * For Ubuntu - `sudo add-apt-repository ppa:jonathonf/python-3.6; sudo apt-get update; sudo apt-get install python3.6`\n",
-    "\n"
+    "## Installation\n",
+    "\n",
+    "* Windows - https://www.python.org/ftp/python/3.6.4/python-3.6.4-amd64.exe\n",
+    "\n",
+    "\n",
+    "* Ubuntu - \n",
+    "  * `sudo add-apt-repository ppa:jonathonf/python-3.6; sudo apt-get update; sudo apt-get install python3.6`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "  * Read–Eval–Print Loop\n",
-    "  * run `python` in shell\n",
-    "    * _what python version are you running?_\n",
-    "  * run `ipython` in shell\n",
-    "    * type `from itertools import` _[tab]+[tab]_\n",
-    "  * `print('hello python!')`\n"
+    "## The Python Shell\n",
+    "\n",
+    "* A Read–Eval–Print Loop (REPL)\n",
+    "\n",
+    "\n",
+    "* Fastest playground\n",
+    "\n",
+    "\n",
+    "* Builtin Pycharm - `<alt>+F11`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mini exercise\n",
+    "\n",
+    "⚙ run `python` in terminal\n",
+    "\n",
+    "⚙ _what python version are you running?_\n",
+    "\n",
+    "⚙ type `print('hello python!')`\n",
+    "\n"
    ]
   },
   {
@@ -104,7 +135,65 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Iter tools!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0\n",
+      "step 1\n",
+      "step 2\n",
+      "step 3\n",
+      "step 4\n",
+      "step 5\n",
+      "step 6\n",
+      "step 7\n",
+      "step 8\n",
+      "step 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(10):\n",
+    "    print('step ' + str(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "step 0\n",
+      "step 2\n",
+      "step 4\n",
+      "step 6\n",
+      "step 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 10, 2):\n",
+    "    print('step ' + str(i))"
+   ]
   },
   {
    "cell_type": "code",
