complete section "code files". starting to work on Syntax

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Twiggle Python Workshop 🐍\n",
     "\n",
@@ -12,7 +16,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
    "source": [
     "## Topics\n",
@@ -43,9 +50,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "==========================================================================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## What's python?\n",
     "\n",
     "* \"Multi paradigm programming language\" 😄\n",
+    "\n",
+    "\n",
+    "* No math degree required!!\n",
     "\n",
     "\n",
     "* First appeared 20 February 1991, 21 years ago\n",
@@ -57,7 +78,7 @@
     "* \"Interpreted\" (and compiled)\n",
     "\n",
     "\n",
-    "* Totally open source, maintained by [PSF](https://www.python.org/psf/led)\n",
+    "* Totally open source, maintained by the [PSF](https://www.python.org/psf/led)\n",
     "  * headed by BDFL Guido van Rosum\n",
     "\n",
     "![title](img/guido.jpeg)\n",
@@ -81,6 +102,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "==========================================================================================="
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## The Python Shell\n",
     "\n",
     "* A Read–Eval–Print Loop (REPL)\n",
@@ -89,7 +117,8 @@
     "* Fastest playground\n",
     "\n",
     "\n",
-    "* Builtin Pycharm - `<alt>+F11`\n"
+    "* Built into Pycharm - `<alt>+F11`\n",
+    "![title](img/python_console_in_pycharm.png)"
    ]
   },
   {
@@ -102,41 +131,117 @@
     "\n",
     "⚙ _what python version are you running?_\n",
     "\n",
-    "⚙ type `print('hello python!')`\n",
-    "\n"
+    "⚙ type `print('hello python!')`\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "\n",
-    "\n",
-    "  * flow control\n",
-    "  2. functions\n",
-    " \n",
-    "  1. Strings & Numbers\n",
-    "  2. Lists\n",
-    "  3. Dictionaries\n",
-    "  4. Iteration"
+    "## Code files"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Code lives in `file_name.py` files. That is all.\n"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "! echo \"print('hello python!')\" > my_first_python_script.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello python!\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python test_python_script.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "! rm my_first_python_script.py"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iter tools!\n"
+    "Packages/Modules live in directories with `__init__.py` files.\n",
+    "* We'll revisit!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# The Syntax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Strings & Numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variables and Control Flow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lists & Dictionaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iteration"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iter tools"
    ]
   },
   {
