wrote control flow section

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -604,6 +604,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nothing to see here. Move along.\n"
+     ]
+    }
+   ],
+   "source": [
+    "if 1 > 2:\n",
+    "    print(\"All Hell's broke loose!!\")\n",
+    "else:\n",
+    "    print(\"Nothing to see here. Move along.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "counted up to 4936704 in 1 second\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "\n",
+    "start_time = current_time = time()\n",
+    "count=0\n",
+    "\n",
+    "while current_time < start_time + 1:\n",
+    "    count += 1\n",
+    "    current_time = time()\n",
+    "    \n",
+    "print(\"counted up to %d in %d second\" % (count, current_time-start_time))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -612,22 +658,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hi Thor! Are you a new employee or just interviewing?\n"
+      "Hi Thor! Are you a new employee, or just interviewing?\n",
+      "Hi Loki! Are you a new KE, or just interviewing?\n"
      ]
     }
    ],
    "source": [
-    "def print_kitchen_greeting(name):\n",
-    "    print('Hi %s! Are you a new employee or just interviewing?' % name)\n",
+    "def print_kitchen_greeting(name, position='employee'):\n",
+    "    print('Hi %s! Are you a new %s, or just interviewing?' % (name, position))\n",
     "\n",
     "print_kitchen_greeting('Thor')\n",
+    "print_kitchen_greeting('Loki', position='KE')\n",
     "    "
    ]
   },
