expanded control flow and wrote iteration and comprehensions section

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -388,6 +388,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "im_a_list = [1, 2, 3]\n",
+    "im_a_tuple = (1, 2, 3)\n",
+    "im_a_dict = {'one': 1, 'two':2, 'three':3}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Lists"
    ]
   },
@@ -605,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -621,6 +641,30 @@
     "    print(\"All Hell's broke loose!!\")\n",
     "else:\n",
     "    print(\"Nothing to see here. Move along.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 170,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fear not, we are safe!\n"
+     ]
+    }
+   ],
+   "source": [
+    "powerpuff_girls = ['Blossom', 'Bubbles', 'Buttercup']\n",
+    "\n",
+    "if 'Mojojojo' in powerpuff_girls:\n",
+    "    print(\"Intruder!!\")\n",
+    "if 'Blossom' not in powerpuff_girls:\n",
+    "    print(\"MIA!!\")\n",
+    "elif len(powerpuff_girls) == 3 and 'Buttercup' in powerpuff_girls:\n",
+    "    print(\"Fear not, we are safe!\")"
    ]
   },
   {
@@ -653,12 +697,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### functions"
+    "### Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -671,12 +715,106 @@
     }
    ],
    "source": [
+    "# defining functions with default arguments\n",
+    "\n",
     "def print_kitchen_greeting(name, position='employee'):\n",
     "    print('Hi %s! Are you a new %s, or just interviewing?' % (name, position))\n",
     "\n",
     "print_kitchen_greeting('Thor')\n",
-    "print_kitchen_greeting('Loki', position='KE')\n",
-    "    "
+    "print_kitchen_greeting('Loki', position='KE')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function print_kitchen_greeting at 0x7f904c0350d0>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Functions are first class citizens in python - \n",
+    "\n",
+    "print(print_kitchen_greeting)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def lower_print(string_to_print: str):\n",
+    "    print(string_to_print.lower())\n",
+    "\n",
+    "def triple_print(string_to_print):\n",
+    "    print(string_to_print * 3)\n",
+    "\n",
+    "        \n",
+    "def customizable_greeting(name, print_func=print):\n",
+    "    print_func(' Hi %s!' % name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Hi Spiderman!\n",
+      " Hi Batman! Hi Batman! Hi Batman!\n",
+      " hi superman!\n"
+     ]
+    }
+   ],
+   "source": [
+    "customizable_greeting('Spiderman')\n",
+    "customizable_greeting('Batman', print_func=triple_print)\n",
+    "customizable_greeting('SUPERMAN', print_func=lower_print)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from random import random\n",
+    "\n",
+    "def two_random_numbers():\n",
+    "    \"\"\"\n",
+    "    returns multiple values (in a tuple)\n",
+    "    \"\"\"\n",
+    "    return random(), random()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.09995748712997543 0.18020721368292203\n"
+     ]
+    }
+   ],
+   "source": [
+    "# automatic tuple \"unpacking\"\n",
+    "x, y = two_random_numbers() \n",
+    "print(x, y)"
    ]
   },
   {
@@ -690,19 +828,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iter tools"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### range"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -729,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -750,21 +881,105 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### enumerate"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello python!\n"
+      "0: 'Arrays'\n",
+      "1: 'are'\n",
+      "2: 'the'\n",
+      "3: 'single'\n",
+      "4: 'most'\n",
+      "5: 'useful'\n",
+      "6: 'datastructure!'\n"
      ]
     }
    ],
    "source": [
-    "print('hello python!')"
+    "for word_position, word in enumerate(words_list):\n",
+    "    print(\"%d: '%s'\" % (word_position, word))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['arrays', 'are', 'the', 'single', 'most', 'useful', 'datastructure!']"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# map\n",
+    "[word.lower() for word in words_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# filter\n",
+    "[word for word in words_list if word.isalpha()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 171,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Arr', 'are', 'the', 'sin', 'mos', 'use']"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# combine!\n",
+    "[word[:3] for word in words_list if word.isalpha()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
