--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "==========================================================================================="
+    "======================================================================================"
    ]
   },
   {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 198,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 200,
    "metadata": {
     "collapsed": true
    },
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "\"I'm a string\""
       ]
      },
-     "execution_count": 48,
+     "execution_count": 202,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
        "'Im also a string'"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
        "'Im a concatenated string'"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "'Im a formatted string'"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 206,
    "metadata": {
     "collapsed": true
    },
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 207,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 208,
    "metadata": {
     "collapsed": true
    },
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 209,
    "metadata": {
     "collapsed": true
    },
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 210,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 212,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 213,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 215,
    "metadata": {
     "collapsed": true
    },
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 218,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-96-fced715d1023>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Arrays'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-219-fced715d1023>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Arrays'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 220,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -669,14 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "counted up to 4936704 in 1 second\n"
+      "counted up to 4511326 in 1 second\n"
      ]
     }
    ],
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -726,14 +726,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function print_kitchen_greeting at 0x7f904c0350d0>\n"
+      "<function print_kitchen_greeting at 0x7f90446fb2f0>\n"
      ]
     }
    ],
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 231,
    "metadata": {
     "collapsed": true
    },
@@ -800,14 +800,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.09995748712997543 0.18020721368292203\n"
+      "0.07253736359272911 0.6878977570351642\n"
      ]
     }
    ],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -970,6 +970,52 @@
    "source": [
     "# combine!\n",
     "[word[:3] for word in words_list if word.isalpha()]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## ⚙ Finally, Exercise 1!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Fill in the following grep.py script:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['/home/ron/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py', '-f', '/run/user/1000/jupyter/kernel-71460c86-1f7a-4311-8fd3-3916772f4ade.json']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This is a template grep.py file\n",
+    "# It should run like so - `python grep.py /path/to/file pattern`\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    print(sys.argv)\n",
+    "    \n",
+    "    # TODO:\n",
+    "    \n",
+    "    # 1- read file (hint - you need to google how to do this)\n",
+    "    # 2- iterate over lines (ditto)\n",
+    "    # 3- if line contains the pattern, print it\n",
+    "    \n",
+    "    # 4- Advanced: pattern is now a regex!\n",
+    "    "
    ]
   },
   {
