wrote section about objects

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "\n",
     "* Totally open source, maintained by the [PSF](https://www.python.org/psf/led)\n",
-    "  * headed by BDFL Guido van Rosum\n",
+    "  * headed by BDFL (Benevolent Dictator For Life) Guido van Rosum\n",
     "\n",
     "![title](img/guido.jpeg)\n",
     "\n"
@@ -117,21 +117,20 @@
     "* Fastest playground\n",
     "\n",
     "\n",
-    "* Built into Pycharm - `<alt>+F11`\n",
-    "![title](img/python_console_in_pycharm.png)"
+    "* Built into Pycharm - ![title](img/python_console_in_pycharm.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Mini exercise\n",
+    "### ⚙ Mini exercise\n",
     "\n",
-    "⚙ run `python` in terminal\n",
+    "1. run `python` in terminal\n",
     "\n",
-    "⚙ _what python version are you running?_\n",
+    "2. _what python version are you running?_\n",
     "\n",
-    "⚙ type `print('hello python!')`\n"
+    "3. type `print('hello python!')`\n"
    ]
   },
   {
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 243,
    "metadata": {
     "collapsed": true
    },
@@ -161,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 245,
    "metadata": {
     "collapsed": true
    },
@@ -199,6 +198,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### ⚙ Mini exercise\n",
+    "\n",
+    "1. Create a `hello_python.py` script\n",
+    "\n",
+    "2. Run it from terminal\n",
+    "\n",
+    "3. Run it from Pycharm\n",
+    "\n",
+    "4. Debug it!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "==========================================================================================="
    ]
   },
@@ -211,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +250,7 @@
        "\"I'm a string\""
       ]
      },
-     "execution_count": 202,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +270,7 @@
        "'Im also a string'"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +290,7 @@
        "'Im a concatenated string'"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 249,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +310,7 @@
        "'Im a formatted string'"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 251,
    "metadata": {
     "collapsed": true
    },
@@ -325,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 252,
    "metadata": {
     "collapsed": true
    },
@@ -336,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 253,
    "metadata": {
     "collapsed": true
    },
@@ -347,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 254,
    "metadata": {
     "collapsed": true
    },
@@ -358,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 255,
    "metadata": {
     "collapsed": true
    },
@@ -369,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 257,
    "metadata": {
     "collapsed": true
    },
@@ -413,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 258,
    "metadata": {
     "collapsed": true
    },
@@ -424,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 260,
    "metadata": {
     "collapsed": true
    },
@@ -454,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 263,
    "metadata": {
     "collapsed": true
    },
@@ -510,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +534,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-219-fced715d1023>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Arrays'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-264-fced715d1023>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mwords_tuple\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'Arrays'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
@@ -538,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 265,
    "metadata": {
     "collapsed": true
    },
@@ -555,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -625,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [
     {
@@ -669,14 +683,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "counted up to 4511326 in 1 second\n"
+      "counted up to 4339252 in 1 second\n"
      ]
     }
    ],
@@ -702,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [
     {
@@ -726,14 +740,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function print_kitchen_greeting at 0x7f90446fb2f0>\n"
+      "<function print_kitchen_greeting at 0x7f90445ece18>\n"
      ]
     }
    ],
@@ -745,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -762,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 276,
    "metadata": {
     "collapsed": true
    },
@@ -800,14 +814,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.07253736359272911 0.6878977570351642\n"
+      "0.9881571061785925 0.5482112783546371\n"
      ]
     }
    ],
@@ -833,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -860,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [
     {
@@ -929,7 +943,7 @@
        "['arrays', 'are', 'the', 'single', 'most', 'useful', 'datastructure!']"
       ]
      },
-     "execution_count": 163,
+     "execution_count": 281,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,11 +955,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 282,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Arrays', 'are', 'the', 'single', 'most', 'useful']"
+      ]
+     },
+     "execution_count": 282,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# filter\n",
     "[word for word in words_list if word.isalpha()]"
@@ -953,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -962,7 +985,7 @@
        "['Arr', 'are', 'the', 'sin', 'mos', 'use']"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -1016,6 +1039,101 @@
     "    \n",
     "    # 4- Advanced: pattern is now a regex!\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class House:\n",
+    "    def __init__(self, address, storage_size):\n",
+    "        self._storage_size = storage_size  # type: int\n",
+    "        self._storage = set()  # type: set\n",
+    "        self._address = address  # type: int\n",
+    "\n",
+    "    def free_space(self):\n",
+    "        return self._storage_size - len(self._storage)\n",
+    "    \n",
+    "    def store(self, junk):\n",
+    "        if self.free_space() <= 0:\n",
+    "            raise OverflowError(\"You got no more room for your junk!!\")\n",
+    "        self._storage.add(junk)\n",
+    "        print('Stored %s' % junk)\n",
+    "    \n",
+    "    def throw_away(self, junk):\n",
+    "        if junk in self._storage:\n",
+    "            self._storage.remove(junk)\n",
+    "            print('Threw away the %s' % junk)\n",
+    "            \n",
+    "    def __str__(self):\n",
+    "        return 'A House at \\'%s\\'' % self._address"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A House at 'Hailanot 25, Maas'\n"
+     ]
+    }
+   ],
+   "source": [
+    "rons_house = House('Hailanot 25, Maas', 3)\n",
+    "print(str(rons_house))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "Stored Bike\n",
+      "Stored Fridge\n",
+      "Stored TV\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rons_house.free_space())\n",
+    "rons_house.store('Bike')\n",
+    "rons_house.store('Fridge')\n",
+    "rons_house.store('TV')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Threw away the Fridge\n"
+     ]
+    }
+   ],
+   "source": [
+    "rons_house.throw_away('Fridge')"
    ]
   },
   {
