extended section about objects

--- a/hello_twiggle/my_first_script.ipynb
+++ b/hello_twiggle/my_first_script.ipynb
@@ -1067,7 +1067,7 @@
     "        if self.free_space() <= 0:\n",
     "            raise OverflowError(\"You got no more room for your junk!!\")\n",
     "        self._storage.add(junk)\n",
-    "        print('Stored %s' % junk)\n",
+    "        print('Stored the %s' % junk)\n",
     "    \n",
     "    def throw_away(self, junk):\n",
     "        if junk in self._storage:\n",
@@ -1138,12 +1138,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 303,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# !!! Black Magic Warning !!!\n",
+    "# methods are just more objects and python is super customizable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class NotImportantEnoughError(Exception):\n",
+    "    pass\n",
+    "\n",
+    "def strict_store(self, junk):\n",
+    "    if 'important' not in junk.lower():\n",
+    "        raise NotImportantEnoughError()\n",
+    "        \n",
+    "    if self.free_space() <= 0:\n",
+    "        raise OverflowError(\"You got no more room for your junk!!\")\n",
+    "    self._storage.add(junk)\n",
+    "    print('Stored %s' % junk)\n",
+    "\n",
+    "House.store = strict_store    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fistuks_house = House('wallnut 25, hazeltown', 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NotImportantEnoughError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNotImportantEnoughError\u001b[0m                   Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-301-a1290fc14ba9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfistuks_house\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstore\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Shoe'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-299-a72f627d2381>\u001b[0m in \u001b[0;36mstrict_store\u001b[0;34m(self, junk)\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mstrict_store\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjunk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;34m'important'\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mjunk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlower\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mNotImportantEnoughError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfree_space\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNotImportantEnoughError\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "fistuks_house.store('Shoe')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored important Shoe\n"
+     ]
+    }
+   ],
+   "source": [
+    "fistuks_house.store('important Shoe')"
+   ]
   }
  ],
  "metadata": {
